--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==3.2.8
 django-crispy-forms==1.13.0
 gunicorn==20.1.0
-pillow==5.1.0
+pillow>=8.3.2
 Mako==1.0.7
 six==1.11.0
 urllib3>=1.26.5
